tests/snapshots/compile__wgsl_color_chromakey_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_chromakey1_background: vec4f,
    u_control_chromakey1_keyColor: vec4f,
    u_control_chromakey1_softness: f32,
    u_control_chromakey1_spill: f32,
    u_control_chromakey1_threshold: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn chromakey1_color(uv: vec2f) -> vec4f {
    let picture = defaultUvMap(uv);
    let foreground = unpremultiply(picture);
    let key = unpremultiply(u.u_control_chromakey1_keyColor);
    let thresh = u.u_control_chromakey1_threshold;
    let soft = max(u.u_control_chromakey1_softness, 1e-4);
    let keyY = dot(key.rgb, vec3f(0.299, 0.587, 0.114));
    let keyChroma = vec2f(0.564 * (key.b - keyY), 0.713 * (key.r - keyY));
    let fgY = dot(foreground.rgb, vec3f(0.299, 0.587, 0.114));
    let fgChroma = vec2f(0.564 * (foreground.b - fgY), 0.713 * (foreground.r - fgY));
    let keyDistance = length(fgChroma - keyChroma) + abs(fgY - keyY) * 0.2;
    let mask = smoothstep(thresh - soft, thresh + soft, keyDistance);
    let bg = u.u_control_chromakey1_background;
    var despilled = foreground.rgb;
    let maxChannel = max(key.r, max(key.g, key.b));
    if (key.g >= maxChannel) {
        despilled.g = min(despilled.g, (despilled.r + despilled.b) * 0.5);
    } else if (key.b >= maxChannel) {
        despilled.b = min(despilled.b, (despilled.r + despilled.g) * 0.5);
    }
    despilled = mix(foreground.rgb, despilled, clamp(u.u_control_chromakey1_spill, 0.0, 1.0) * (1.0 - mask));
    let kept = premultiply(vec4f(despilled, picture.a * mask));
    return kept + bg * (1.0 - kept.a);
}

fn chromakey1_mask(uv: vec2f) -> f32 {
    let picture = defaultUvMap(uv);
    let foreground = unpremultiply(picture);
    let key = unpremultiply(u.u_control_chromakey1_keyColor);
    let thresh = u.u_control_chromakey1_threshold;
    let soft = max(u.u_control_chromakey1_softness, 1e-4);
    let keyY = dot(key.rgb, vec3f(0.299, 0.587, 0.114));
    let keyChroma = vec2f(0.564 * (key.b - keyY), 0.713 * (key.r - keyY));
    let fgY = dot(foreground.rgb, vec3f(0.299, 0.587, 0.114));
    let fgChroma = vec2f(0.564 * (foreground.b - fgY), 0.713 * (foreground.r - fgY));
    let keyDistance = length(fgChroma - keyChroma) + abs(fgY - keyY) * 0.2;
    let mask = smoothstep(thresh - soft, thresh + soft, keyDistance);
    return mask;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(chromakey1_mask(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = chromakey1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
