tests/snapshots/compile__wgsl_color_colormapping_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_checkerboard4_color1: vec4f,
    u_control_checkerboard4_color2: vec4f,
    u_control_checkerboard4_frequency: f32,
    u_control_checkerboard5_color1: vec4f,
    u_control_checkerboard5_color2: vec4f,
    u_control_checkerboard5_frequency: f32,
    u_control_checkerboard6_color1: vec4f,
    u_control_checkerboard6_color2: vec4f,
    u_control_checkerboard6_frequency: f32,
    u_control_mix8_amount: f32,
    u_control_rgba7_a: f32,
    u_control_rgba7_b: f32,
    u_control_rgba7_g: f32,
    u_opt_mix8_curve: i32,
    u_opt_mix8_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn checkerboard4_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard4_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard4_color1;
    let c2 = u.u_control_checkerboard4_color2;
    return mix(c1, c2, checker);
}

fn checkerboard5_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard5_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard5_color1;
    let c2 = u.u_control_checkerboard5_color2;
    return mix(c1, c2, checker);
}

fn checkerboard6_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard6_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard6_color1;
    let c2 = u.u_control_checkerboard6_color2;
    return mix(c1, c2, checker);
}

fn colormapping1_color(uv: vec2f) -> vec4f {
    let color = checkerboard3_output(uv);
    let lum = dot(color.rgb, vec3f(0.2126, 0.7152, 0.0722));
    let midColor = checkerboard5_output(uv);
    var graded: vec3f;
    if (lum < 0.5) {
        graded = mix((checkerboard4_output(uv)).rgb, midColor.rgb, lum * 2.0);
    } else {
        graded = mix(midColor.rgb, (checkerboard6_output(uv)).rgb, (lum - 0.5) * 2.0);
    }
    let maxc = max(max(color.r, color.g), color.b);
    let minc = min(min(color.r, color.g), color.b);
    let saturation = select((maxc - minc) / maxc, 0.0, maxc <= 0.0);
    let result = mix(graded, color.rgb, saturation * 0.3);
    return vec4f(clamp(result, vec3f(0.0), vec3f(1.0)), color.a);
}

fn colormapping1_value(uv: vec2f) -> f32 {
    let color = checkerboard3_output(uv);
    let lum = dot(color.rgb, vec3f(0.2126, 0.7152, 0.0722));
    return lum;
}

fn rgba7_output(uv: vec2f) -> vec4f {
    return vec4f(colormapping1_value(uv), u.u_control_rgba7_g, u.u_control_rgba7_b, u.u_control_rgba7_a);
}

fn mix8_output(uv: vec2f) -> vec4f {
    let a = colormapping1_color(uv);
    let b = rgba7_output(uv);
    let amt = clamp(u.u_control_mix8_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix8_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix8_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix8_output(uv);
}
