tests/snapshots/compile__wgsl_color_colormapping_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_colormapping1_highlights: vec4f,
    u_control_colormapping1_midtones: vec4f,
    u_control_colormapping1_shadows: vec4f,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn colormapping1_color(uv: vec2f) -> vec4f {
    let color = defaultUvMap(uv);
    let lum = dot(color.rgb, vec3f(0.2126, 0.7152, 0.0722));
    let midColor = u.u_control_colormapping1_midtones;
    var graded: vec3f;
    if (lum < 0.5) {
        graded = mix((u.u_control_colormapping1_shadows).rgb, midColor.rgb, lum * 2.0);
    } else {
        graded = mix(midColor.rgb, (u.u_control_colormapping1_highlights).rgb, (lum - 0.5) * 2.0);
    }
    let maxc = max(max(color.r, color.g), color.b);
    let minc = min(min(color.r, color.g), color.b);
    let saturation = select((maxc - minc) / maxc, 0.0, maxc <= 0.0);
    let result = mix(graded, color.rgb, saturation * 0.3);
    return vec4f(clamp(result, vec3f(0.0), vec3f(1.0)), color.a);
}

fn colormapping1_value(uv: vec2f) -> f32 {
    let color = defaultUvMap(uv);
    let lum = dot(color.rgb, vec3f(0.2126, 0.7152, 0.0722));
    return lum;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(colormapping1_value(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = colormapping1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
