tests/snapshots/compile__wgsl_color_colorshift_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_colorshift1_hue: f32,
    u_control_colorshift1_saturation: f32,
    u_control_colorshift1_value: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn colorshift1_output(uv: vec2f) -> vec4f {
    let color = unpremultiply(defaultUvMap(uv));
    let maxc = max(max(color.r, color.g), color.b);
    let minc = min(min(color.r, color.g), color.b);
    let delta = maxc - minc;
    var hue = select(fract(select(select(
            (color.r - color.g) / delta + 4.0,
            (color.b - color.r) / delta + 2.0,
            maxc == color.g),
        (color.g - color.b) / delta,
        maxc == color.r) / 6.0), 0.0, delta <= 0.0);
    var sat = select(delta / maxc, 0.0, maxc <= 0.0);
    hue = fract(hue + (u.u_control_colorshift1_hue));
    sat = clamp(sat * (u.u_control_colorshift1_saturation), 0.0, 1.0);
    let val = clamp(maxc * (u.u_control_colorshift1_value), 0.0, 1.0);
    let wheel = abs(fract(vec3f(hue) + vec3f(1.0, 2.0 / 3.0, 1.0 / 3.0)) * 6.0 - 3.0);
    let rgb = val * mix(vec3f(1.0), clamp(wheel - 1.0, vec3f(0.0), vec3f(1.0)), sat);
    return premultiply(vec4f(rgb, color.a));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return colorshift1_output(uv);
}
